v4: int8 quantization — fits 350 MB rinha budget, score still -6000
Replaces float32 dataset with int8 (global min/max). Distance compute uses
hybrid storage (byte[] for memory, B->F SIMD widening + FMA for the inner
loop). The dataset shrinks 168 MB -> 42 MB and the stack now fits exactly
in the rinha 350 MB budget for the first time.

Code changes:
- DatasetBuilder: streams json.gz into temp float[42M], computes GLOBAL
  min/max (not per-dim — see below), quantizes to byte and writes three
  files: vectors-i8.bin (42 MB), scales.bin (112 B), labels.bin.
- Dataset: loads byte[] + mins[14] + maxs[14] from disk, exposes
  quantize(float[14], byte[14]) for query-time quantization. Adds 16 B
  tail padding so SIMD masked tail loads on the last record stay in bounds.
- KnnSearcher: ByteVector load (8 lanes/64-bit) + B->F convertShape into
  FloatVector (8 lanes/256-bit) + FMA accumulate. Heap stores float
  distances, index ints.
- App: drops KNN_MODE (single int8 path), logs SIMD species + 40 MB heap
  size at startup.
- docker-compose: shrinks limits to 160 MB/api + 30 MB/nginx = exactly
  350 MB. Drops -Xmx320m -> -Xmx128m.
- KnnSearcherInt8ParityTest: synthetic float32 ground truth vs int8 v4
  output; asserts >=90% fraud_score agreement (uniform random data is the
  worst case for k-NN ordering, threshold reflects that).

Per-dim vs global scaling — the painful lesson:
  Initial design used per-dim min/max for max int8 resolution per dim.
  Math: int8 distance becomes a per-dim weighted L2 in float space, with
  weights 1/step_d^2. Dims with ranges 1 (booleans, [0,1] continuous) get
  weight 65k; sentinel dim with range 2 gets weight 16k (1/4). Synthetic
  parity crashed to 14% top-5 agreement. Switched to global [-1, 1] —
  every dim shares the same step, so int8 distance is just a constant
  multiple of float32 distance, ordering preserved up to rounding noise.
  Parity recovered to 87% set match / 95% score match on uniform data.

Pure int8 SIMD didn't pan out:
